--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
 .fa-trash {
   color: black;
 }
+
+.fa-square {
+color: #26a69a;
+}
+
+.fa-check-square {
+  color: #26a69a;
+}
+
+.completedTask {
+  text-decoration-line: line-through;
+  text-decoration-color: #87898c;
+  color: #87898c;
+}
